<resources>
    <string name="app_name">ProjectRhaegal</string>

    <string name="scan">Scan</string>
    <string name="test">Test</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="choose">Choose</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting…</string>
    <string name="disconnecting">Disconnecting…</string>
    <string name="disconnect">Disconnect</string>
    <string name="autonomous">Autonomous</string>
    <string name="manual">Assisted</string>
    <string name="turbo">Turbo</string>
    <string name="speed0">0.0 km/h</string>
    <string name="advStop">Warning ! Stop sign detected</string>
    <string name="advSearch">Warning ! Search sign detected</string>
    <string name="emergencyTitle">Emergency stop</string>
    <string name="emergencyMsg">The car has encountered an obstacle. </string>
    <string name="emergencyMsgFront">There is an obstacle in front of the car. </string>
    <string name="emergencyMsgBack">There is an obstacle behind the car. </string>
    <string name="searchTitle">Search sign detected</string>
    <string name="searchMsg">Do you want to switch to autonomous mode ?</string>
    <string name="exitTitle">Exit</string>
    <string name="exitMsg">Do you really want to leave ?</string>
    <string name="stopActionTitle">Please wait </string>
    <string name="stopActionMsg">The car has stopped for a stop sign </string>
    <string name="searchModeTitle">Search mode </string>
    <string name="searchModeMsg">The following groups of objects have been detected  </string>
    <string name="searchModeSmall">small</string>
    <string name="searchModeMedium">medium</string>
    <string name="searchModeLarge">large</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="yesExit">yes, disconnect me</string>
    <string name="noExit">no</string>
    <string name="file_prompt">Choose a session date</string>
    <string name="obstacle">obstacle</string>
    <string name="ahead">ahead</string>





</resources>

